--- a/public/global.css
+++ b/public/global.css
@@ -1,8 +1,10 @@
 body {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
+  color: rgba(38, 38, 38, 0.7);
+  font-family: 'Lato', sans-serif;
 }
 
 ul {
-	list-style: none;
+  list-style: none;
 }
